--- a/app/views/comments/create.html.erb
+++ b/app/views/comments/create.html.erb
@@ -1,7 +1,6 @@
 <h1>投稿が完了しました</h1>
-<p>名前</p>
-<%= @comment.name %>
-<p>内容</p>
-<%= @comment.content %>
+<hr>
+<p>名前：<%= @teacher.family_name %><%= @teacher.first_name %>様</p>
+<p>内容：<%= @comment.content %></p>
 <hr>
 <a href="/comments">トップに戻る</a>
