--- a/app/views/comments/update.html.erb
+++ b/app/views/comments/update.html.erb
@@ -1,8 +1,6 @@
 <h1>投稿を変更しました。</h1>
 <hr>
-<p>名前</p>
-<%= @comment.name %>
-<p>内容</p>
-<%= @comment.content %>
+<p>名前：<%= @teacher.family_name %><%= @teacher.first_name %></p>
+<p>内容：<%= @comment.content %></p>
 <hr>
 <a href="/comments">トップに戻る</a>
