--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Myapp</title>
+  <title>MatchingDiet</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -16,16 +16,33 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
       </button>
-      <a href="/posts" class="navbar-brand">myapp</a>
+      <a href="/" class="navbar-brand">MatchingDiet</a>
     </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
         <li><a href="/posts/new">新しく投稿する</a></li>
+        <li><a href="/users">ユーザー一覧</a></li>
+        <li><a href="/teachers">コンサル一覧</a></li>
+        <li><a href="/users/<%= current_user.id %>">ユーザー情報</a></li>
+        <li><%= link_to "ログアウト", destroy_user_session_path, :method => :delete %></li>
+        <% elsif teacher_signed_in? %>
+        <li><a href="/comments/new">新しく投稿する</a></li>
+        <li><a href="/users">ユーザー一覧</a></li>
+        <li><a href="/teachers">コンサル一覧</a></li>
+        <li><a href="/teachers/<%= current_teacher.id %>">コンサル情報</a></li>
+        <li><%= link_to "ログアウト", destroy_teacher_session_path, :method => :delete %></li>
+        <% else %>
+        <li><a href="/users/sign_up">ユーザー登録</a></li>
+        <li><a href="/teachers/sign_up">コンサル登録</a></li>
+        <li><a href="/users/sign_in">ユーザーログイン</a></li>
+        <li><a href="/teachers/sign_in">コンサルログイン</a></li>
+        <% end %>
       </ul>
       </div>
   </div>
 </nav>
-<div class="container">
+<div class="container main-page">
   <%= yield %>
 </div>
 </body>
