--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,10 +1,15 @@
 <h1>投稿</h1>
 <hr>
-<p><%= @comment.name %></p>
-<p><%= @comment.content %></p>
+<p><%= @teacher.family_name %><%= @teacher.first_name %>さん</p>
+<h4><%= @comment.content %></h4>
+<small><%= @comment.created_at %></small>
 <hr>
 <p><a href="/comments" class="btn btn-info">トップに戻る</a></p>
-<hr>
+<% if teacher_signed_in? %>
+<% if @comment.teacher_id == current_teacher.id %>
 <p><a href="/comments/<%= @comment.id %>/edit" class="btn btn-success">投稿を編集する</a></p>
-<hr>
 <p><a href="/comments/<%= @comment.id %>" data-method="delete" class="btn btn-danger">投稿を削除する</a></p>
+<% end %>
+<% end %>
+
+
