--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,2 +1,3 @@
-<h1>Home#top</h1>
-<p>Find me in app/views/home/top.html.erb</p>
+<h1>ようこそ</h1>
+<br>
+<a href="/posts" class="btn btn-primary">投稿一覧を見る</a>
