--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,8 @@
 <h1>投稿一覧</h1>
 <hr>
 <% @posts.each do |p| %>
-  <p><a href="/posts/<%= p.id %>"><%= p.id %></a></p>
-  <p><%= p.name %></p>
-  <p><%= p.content %></p>
+  <p><a href="/users/<%= p.user_id %>"><%= User.find(p.user_id).family_name %><%= User.find(p.user_id).first_name %>様</a>の投稿</p>
+  <h3><a href="/posts/<%= p.id %>"><%= p.content %></a></h3>
   <hr>
 <% end %>
 <a href="/posts/new">新しく投稿する</a>
