--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,13 @@
 <h1>投稿</h1>
-<p><%= @post.name %></p>
-<p><%= @post.content %></p>
+<hr>
+<p><%= @user.family_name %><%= @user.first_name %>さん</p>
+<h4><%= @post.content %></h4>
+<small><%= @post.created_at %></small>
+<hr>
 <p><a href="/posts">トップに戻る</a></p>
+<% if user_signed_in? %>
+<% if @post.user_id == current_user.id %>
 <p><a href="/posts/<%= @post.id %>/edit">投稿を編集する</a></p>
 <p><a href="/posts/<%= @post.id %>" data-method="delete">投稿を削除する</a></p>
+<% end %>
+<% end %>
