--- a/app/views/posts/update.html.erb
+++ b/app/views/posts/update.html.erb
@@ -1,8 +1,6 @@
 <h1>投稿を変更しました。</h1>
 <hr>
-<p>名前</p>
-<%= @post.name %>
-<p>内容</p>
-<%= @post.content %>
+<p>名前：<%= @user.family_name %><%= @user.first_name %></p>
+<p>内容：<%= @post.content %></p>
 <hr>
 <a href="/posts">トップに戻る</a>
